build.log

> jpcloud@0.0.0 build
> docusaurus build

[INFO] [en] Creating an optimized production build...
ℹ Compiling Client
ℹ Compiling Server
✔ Client: Compiled with some errors in 24.52s


SyntaxError: /opt/website/docs/JP_Cloud_Wiki/Linux/Gnome.md: Expected corresponding JSX closing tag for <username>. (28:40)
  26 | StartupNotify=true
  27 | `}</code></pre>
> 28 | <p>{`Hello `}<username>{`. How Are you`}</p>
     |                                         ^
  29 |     </MDXLayout>
  30 |   )
  31 | };
[ERROR] Client bundle compiled with errors therefore further build is impossible.
